[gd_scene load_steps=12 format=3 uid="uid://deunfyyhgvv8y"]

[ext_resource type="Script" uid="uid://dj5l0ikahya0q" path="res://skin_shop.gd" id="1_cmjhk"]
[ext_resource type="FontFile" uid="uid://bjrb5nqf3l6f4" path="res://PressStart2P-Regular.ttf" id="2_e85xj"]
[ext_resource type="Texture2D" uid="uid://dt47exn2g3dsu" path="res://skins/Icon29_02.png" id="3_2h4g8"]
[ext_resource type="Texture2D" uid="uid://i36378n7mmk0" path="res://skins/Icon29_09.png" id="4_cag4r"]
[ext_resource type="Texture2D" uid="uid://cfm3wiiufm2a2" path="res://skins/Icon29_13.png" id="5_vkfm0"]
[ext_resource type="Texture2D" uid="uid://cfk4bqmeerbh2" path="res://skins/Icon29_16.png" id="6_52cam"]
[ext_resource type="Texture2D" uid="uid://h0b87ldmcu0u" path="res://skins/Icon29_24.png" id="7_04fyq"]
[ext_resource type="Texture2D" uid="uid://ebdwvp0gcoee" path="res://skins/Icon29_27.png" id="8_b5ydf"]
[ext_resource type="Texture2D" uid="uid://nhupsr3cltih" path="res://skins/Icon29_32.png" id="9_y3cso"]
[ext_resource type="Texture2D" uid="uid://c6e0du0mj8u6x" path="res://skins/Icon29_38.png" id="10_typo8"]

[sub_resource type="LabelSettings" id="LabelSettings_cmjhk"]
font = ExtResource("2_e85xj")
font_size = 18

[node name="SkinShop" type="CanvasLayer"]
script = ExtResource("1_cmjhk")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(20.12, 34.6)
color = Color(0, 0, 0, 0.529412)

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -128.0
offset_top = 404.0
offset_right = 128.0
offset_bottom = 423.0
grow_horizontal = 2
text = "Choose your Gun!"
label_settings = SubResource("LabelSettings_cmjhk")

[node name="Label2" type="Label" parent="."]
modulate = Color(1, 0.668803, 0.616929, 1)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -144.0
offset_top = 404.0
offset_right = 144.0
offset_bottom = 423.0
grow_horizontal = 2
text = "Sorry, not enough money :<"
label_settings = SubResource("LabelSettings_cmjhk")

[node name="GridContainer" type="GridContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.5
offset_top = -152.0
offset_right = 74.5
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="SkinItem" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_e85xj")
text = "Skin 0 - free"
icon = ExtResource("3_2h4g8")

[node name="SkinItem1" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_e85xj")
text = "Skin 1 - 1 coin"
icon = ExtResource("4_cag4r")

[node name="SkinItem2" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_e85xj")
text = "Skin 2 - 2 coins"
icon = ExtResource("5_vkfm0")

[node name="SkinItem3" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_e85xj")
text = "Skin 3 - 3 coins"
icon = ExtResource("6_52cam")

[node name="SkinItem4" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_e85xj")
text = "Skin 4 - 4 coins"
icon = ExtResource("7_04fyq")

[node name="SkinItem5" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_e85xj")
text = "Skin 5 - 5 coins"
icon = ExtResource("8_b5ydf")

[node name="SkinItem6" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_e85xj")
text = "Skin 6 - 6 coins"
icon = ExtResource("9_y3cso")

[node name="SkinItem7" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_e85xj")
text = "Skin 7 - 7 coins"
icon = ExtResource("10_typo8")

[node name="CloseButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -58.0
offset_top = -541.0
offset_right = 41.0
offset_bottom = -490.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_e85xj")
text = "Exit"
